k8s/14-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: consultor
spec:
  clusterIP: None
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: consultor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.17.6
          ports:
            - containerPort: 5601
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
