k8s/20-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: consultor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: core
          image: ghcr.io/re-colocar-me/core:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: consultor
spec:
  selector:
    app: core
  ports:
    - port: 8080
      targetPort: 8080
